--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="ask_permision">Locatie is vereist.</string>
     <string name="permission_ok">Toestaan</string>
     <string name="title_activity_question">QuestionActivity</string>
+    <string name="snackbarCameraPermission">Camera permissie is nodig om QR codes te scannen.</string>
 </resources>
