maps & questions acitiviy permisie voor camera op correcte plek geplaatst Database toegevoegd en initialize fragments in details activity toegevoegd
problemen met livedata in mapsactivity opgelost

probleem met vragen in database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@ Manneken Pis werd "ontvoerd" door de Antwerpse studentenclub de Wikings in de ij
 De replica van Manneken Pis werd op 26 april 1978 "gestolen" door studenten van Technica, als stunt voor een presesverkiezing. Ze lieten hem op hun school zijn ding doen. Als straf moesten ze een nieuw kostuum voor hem maken. Elk jaar draagt Manneken Pis dit kostuum op de dag waarop ze hun nieuwe studenten dopen en sluiten ze er een vat bier aan waardoor hij bier plast.
 </string>
     <string name="nameMannekepis">Manneke pis</string>
+    <string name="jeanekepis">Jeaneke pis</string>
+    <string name="leopold">Ruitersstandbeeld Leopold II</string>
+    <string name="godfried">Godfried van Bouillon</string>
 </resources>
