maps & questions acitiviy permisie voor camera op correcte plek geplaatst Database toegevoegd en initialize fragments in details activity toegevoegd
problemen met livedata in mapsactivity opgelost

probleem met vragen in database

probleem met database volledig opgelost: POJO relation om alles te laten werken

controle op vragen

vragen correct -> update statue naar complete
fragments werken
terug naar map activity, andere van de stack afsluiten

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+
+<!-- TODO: string resource in zelfde taal + tweede taal -->
 <resources>
     <string name="app_name">AndroidWerkstuk</string>
     <string name="title_activity_maps">Map</string>
@@ -30,4 +32,5 @@ De replica van Manneken Pis werd op 26 april 1978 "gestolen" door studenten van 
     <string name="jeanekepis">Jeaneke pis</string>
     <string name="leopold">Ruitersstandbeeld Leopold II</string>
     <string name="godfried">Godfried van Bouillon</string>
+    <string name="continue_the_tour">Continue the tour</string>
 </resources>
