--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
-
 <resources>
     <string name="app_name">Statues challenge Brussels</string>
-    <string name="title_activity_maps"></string>
+    <string name="title_activity_maps">Map activity</string>
     <string name="Welcome">Statues challenge Brussels</string>
     <string name="start">Start the challange</string>
     <string name="ask_permision">Location is required.</string>
@@ -71,5 +70,14 @@ After the independence of Belgium in 1830, the young government decided to place
     <string name="data1830">1830</string>
     <string name="InwelkjaarisgodfriedgemaaktVraag">In what year was the statue of Godfrey of Bouillon sized?</string>
     <string name="next">Next</string>
+    <string name="reset">Reset</string>
+    <string name="instructions">Instructions</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ok">OK</string>
+    <string name="howtomsg">1. Walk to the statues where you will find a QR code   2. Scan to QR code   3. answer the question (you will find the answer near or on the statues   When you answered correctly you will get more information about the statue   Enjoy!</string>
+    <string name="howtotitle">How to do the challange?</string>
+    <string name="errorVragen">Answer all question to continue.</string>
 
 </resources>
