--- a/app/src/main/res/values-b+nl/strings.xml
+++ b/app/src/main/res/values-b+nl/strings.xml
@@ -6,7 +6,7 @@
     <string name="start">Start de challange</string>
     <string name="ask_permision">Locatie is vereist.</string>
     <string name="permission_ok">Toestaan</string>
-    <string name="title_activity_question">Vragen</string>
+    <string name="title_activity_question">Correct!</string>
     <string name="snackbarCameraPermission">Camera is nodig om QR codes te kunnen scannen.</string>
     <string name="standbeeldenStart">Standbeelden</string>
     <string name="info">Informatie over het standbeeld</string>
@@ -79,17 +79,17 @@ Na de onafhankelijkheid van België in 1830 besliste de jonge regering om overal
     <string name="data1848">1848</string>
     <string name="data1100">1100</string>
     <string name="data1830">1830</string>
-    <string name="InwelkjaarisgodfriedgemaaktVraag">In welk jaar is het standbeeld van Godfried  van Bouillon gemaatk?</string>
+    <string name="InwelkjaarisgodfriedgemaaktVraag">In welk jaar is het standbeeld van Godfried  van Bouillon gemaakt?</string>
     <string name="next">Volgende</string>
 
 
     <string name="reset">Reset</string>
-    <string name="instructions">Instructions</string>
+    <string name="instructions">Instructies</string>
 
-    <!-- TODO: vertaal -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ok">OK</string>
-    <string name="howtomsg">1. Walk to the statues where you will find a QR code \n  2. Scan to QR code  \n 3. answer the question (you will find the answer near or on the statues  \n When you answered correctly you will get more information about the statue  \n  Enjoy!</string>
-    <string name="howtotitle">How to do the challange?</string>
-    <string name="errorVragen">Answer all question to continue.</string>
+    <string name="howtomsg">De volgorde waarin je elke challange voltooid is van geen belang. Je moet je eigen weg vinden naar elk standbeeld.\n\n1. Ga naar de standbeelden aangeduidt op de map \n2. Scan de QR code  \n3. beantwoord de vragen (je vindt de antwoorden rond of op het standbeeld)  \n \nAls je de vragen correct antwoord krijg je meer informatie over het standbeeld  \n\n\nVeel plezier!</string>
+    <string name="howtotitle">Hoe werkt de challange?</string>
+    <string name="errorVragen">Antwoord alle vragen om door te gaan.</string>
+    <string name="fouteqr">Fout opgetreden bij het scannen van de QR code</string>
 </resources>
